[package]
name = "marvin-fiddler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = {version = "1.0.0", features = ["add", "display", "from", "into"]}
num = "0.4.3"
num-traits = "0.2.19"
pipe-trait = "0.4.0"
reqwest = {"version" = "0.12.5", "features" = ["blocking", "json"]}
serde = {"version" = "1.0.207", features = ["derive"]}
thiserror = "1.0.63"
